# badgevet

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/: classify.rs  error.rs  fetch.rs  github.rs  lib.rs  main.rs  markdown.rs  model.rs  output.rs  provider.rs  schema.rs
tests/: cli.rs  conformance.rs  fix.rs  scan.rs
