[package]
name = "badgevet"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Find retired and broken status badges in Markdown that link checkers miss"
authors = ["Ruben J. Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/badgevet"
homepage = "https://github.com/rvben/badgevet"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "badgevet"
path = "src/lib.rs"

[[bin]]
name = "badgevet"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
pulldown-cmark = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
