[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "badgevet"
dynamic = ["version"]
description = "Find retired and broken status badges in Markdown that link checkers miss"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ruben J. Jongejan <ruben.jongejan@gmail.com>" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/badgevet"
Repository = "https://github.com/rvben/badgevet"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
